Refactor `fix_trailing_whitespace` (#411)
* correctly handle trailing whitespace for all files, especially Markdown, without loading entire file into memory.

* update .pre-commit-config.yaml

* update ci.yaml

* update fix_trailing_whitespace.rs set default chars.

* restore ci.yaml

* update fix_trailing_whitespace.rs

* minor message style tweak

* use different buffer strategies for files based on size

---------

Co-authored-by: Jo <10510431+j178@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,11 @@
 # JetBrains IDE
 .idea
 
+# Vscode IDE
+.vscode
+
 # macOS
 **/.DS_Store
 
 # profiling flamegraphs
 *.flamegraph.svg
-
-# vscode
-.vscode
