Static link `liblzma` (#445)
* Static link `liblzma`

* Fix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,9 @@ http = { version = "1.1.0" }
 indicatif = { version = "0.18.0" }
 indoc = { version = "2.0.5" }
 itertools = { version = "0.14.0" }
+# Enable static linking for liblzma
+# This is required for the `xz` feature in `async-compression`
+liblzma = { version = "*", features = ["static"]}
 miette = { version = "7.5.0", features = ["fancy-no-backtrace"] }
 owo-colors = { version = "4.1.0" }
 rand = { version = "0.9.0" }
@@ -84,6 +87,9 @@ insta = { version = "1.40.0", features = ["filters"] }
 insta-cmd = { version = "0.6.0" }
 predicates = { version = "3.1.2" }
 regex = { version = "1.11.0" }
+
+[package.metadata.cargo-shear]
+ignored = ["liblzma"]
 
 [build-dependencies]
 fs-err = { version = "3.1.0" }
