--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: "rustfmt"
         run: cargo fmt --all --check
 
-  cargo-clippy:
+  cargo-clippy-linux:
     name: "cargo clippy | ubuntu"
     timeout-minutes: 10
     runs-on: ubuntu-latest
@@ -165,6 +165,7 @@ jobs:
             --workspace \
             --status-level skip --failure-output immediate --no-fail-fast -j 8 --final-status-level slow
 
+
   cargo-test-windows:
     timeout-minutes: 15
     runs-on: windows-latest
@@ -214,3 +215,80 @@ jobs:
         run: |
           cargo nextest show-config test-groups
           cargo nextest run --workspace --status-level skip --failure-output immediate --no-fail-fast -j 8 --final-status-level slow
+
+
+  test-python-setup-linux:
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    name: "test python setup | linux"
+    steps:
+      - uses: actions/checkout@v4
+      - uses: rui314/setup-mold@v1
+      - uses: Swatinem/rust-cache@v2
+      - name: "Install Rust toolchain"
+        run: rustup show
+      - name: "Build prek"
+        run: cargo build
+      - name: "Run test"
+        run: |
+          cd /tmp
+          mkdir python-setup
+          cd python-setup
+          git init
+          git config user.name "Test User"
+          git config user.email "test@example.com"
+          echo "print('Hello from Python!')" > test.py
+          cat > .pre-commit-config.yaml << 'EOF'
+          repos:
+            - repo: 'https://github.com/pre-commit/pre-commit-hooks'
+              rev: v5.0.0
+              hooks:
+                - id: trailing-whitespace
+                - id: end-of-file-fixer
+                - id: check-yaml
+                - id: check-added-large-files
+          EOF
+          git add .
+          git commit -m "Initial commit"
+          ${{ github.workspace }}/target/debug/prek run --files test.py -vvv
+
+  test-python-setup-windows:
+    timeout-minutes: 15
+    runs-on: windows-latest
+    name: "test python setup | windows"
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Create Dev Drive
+        run: ${{ github.workspace }}/.github/workflows/setup-dev-drive.ps1
+
+      - uses: Swatinem/rust-cache@v2
+
+      - name: "Install Rust toolchain"
+        run: rustup show
+
+      - name: "Build prek"
+        run: cargo build
+
+      - name: "Run test"
+        run: |
+          cd $env:TEMP
+          mkdir python-setup
+          cd python-setup
+          git init
+          git config user.name "Test User"
+          git config user.email "test@example.com"
+          echo "print('Hello from Python!')" > test.py
+          @"
+          repos:
+            - repo: 'https://github.com/pre-commit/pre-commit-hooks'
+              rev: v5.0.0
+              hooks:
+                - id: trailing-whitespace
+                - id: end-of-file-fixer
+                - id: check-yaml
+                - id: check-added-large-files
+          "@ > .pre-commit-config.yaml
+          git add .
+          git commit -m "Initial commit"
+          & "${{ github.workspace }}/target/debug/prek" run --files test.py -vvv
