--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -40,7 +40,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --locked --out dist
+          args: --release --locked --out dist --features self-update
           sccache: 'true'
           manylinux: auto
       - name: "Upload wheels"
@@ -82,7 +82,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --locked --out dist
+          args: --release --locked --out dist --features self-update
           sccache: 'true'
       - name: "Upload wheels"
         uses: actions/upload-artifact@v4
@@ -118,7 +118,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --locked --out dist
+          args: --release --locked --out dist --features self-update
           sccache: 'true'
       - name: "Upload wheels"
         uses: actions/upload-artifact@v4
