--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,12 +59,12 @@ itertools = { version = "0.14.0" }
 # Enable static linking for liblzma
 # This is required for the `xz` feature in `async-compression`
 liblzma = { version = "*", features = ["static"]}
-miette = { version = "7.5.0", features = ["fancy-no-backtrace"] }
 owo-colors = { version = "4.1.0" }
 rand = { version = "0.9.0" }
 rayon = { version = "1.10.0" }
 reqwest = { version = "0.12.9", default-features = false, features = ["http2", "stream", "json", "rustls-tls-webpki-roots"] }
 rustc-hash = { version = "2.1.1" }
+rustix = { version = "1.0.7", features = ["pty", "process", "fs", "termios"] }
 same-file = { version = "1.0.6" }
 semver = { version = "1.0.24", features = ["serde"] }
 serde = { version = "1.0.210", features = ["derive"] }
