--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,8 @@ same-file = { version = "1.0.6" }
 semver = { version = "1.0.24", features = ["serde"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_ignored = { version = "0.1.12" }
-serde_json = { version = "1.0.132" }
+serde_json = { version = "1.0.132" , features = ["unbounded_depth"]}
+serde_stacker = {version = "0.1.12"}
 serde_yaml = { version = "0.9.34" }
 shlex = { version = "1.3.0" }
 target-lexicon = { version = "0.13.0" }
