Disable building for s390x temporarily (#516)

--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -32,7 +32,8 @@ targets = [
     "powerpc64-unknown-linux-gnu",
     "powerpc64le-unknown-linux-gnu",
     "riscv64gc-unknown-linux-gnu",
-    "s390x-unknown-linux-gnu",
+    # `psm` cannot compile on s390x, disable for now.
+    # "s390x-unknown-linux-gnu",
     "x86_64-unknown-linux-gnu",
     "x86_64-unknown-linux-musl",
     "x86_64-pc-windows-msvc",
