Add a renovate rule to bump bundled uv version (#528)
* Add a renovate rule to bump bundled uv version

* Use custom manager

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,6 +12,19 @@
   "pre-commit": {
     "enabled": true
   },
+  "customManagers": [
+    // Custom manager to update the bundled uv version with the latest uv version from PyPI.
+    {
+      "customType": "regex",
+      "fileMatch": ["src/languages/python/uv.rs$"],
+      "datasourceTemplate": "pypi",
+      "packageNameTemplate": "uv",
+      "matchStrings": [
+        // Match: const CUR_UV_VERSION: &str = "0.8.6";
+        "const\\s+CUR_UV_VERSION\\s*:\\s*&str\\s*=\\s*\"(?<currentValue>\\d+\\.\\d+\\.\\d+)\""
+      ]
+    }
+  ],
   "packageRules": [
     // Pin GitHub Actions to immutable SHAs.
     {
