--- a/mise.toml
+++ b/mise.toml
@@ -23,7 +23,7 @@ run = [
 
 [tasks.test-unit]
 description = "Run unit tests with insta review"
-run = "cargo insta test --review --bin prek -- $F"
+run = "cargo insta test --review --bin prek -- {{arg(name='filter')}}"
 
 [tasks.test-all-unit]
 description = "Run all unit tests with insta review"
@@ -31,7 +31,7 @@ run = "cargo insta test --review --workspace --lib --bins"
 
 [tasks.test-integration]
 description = "Run specific integration test with insta review"
-run = "cargo insta test --review --test $T -- $F"
+run = "cargo insta test --review --test {{arg(name='test')}} -- {{arg(name='filter')}}"
 
 [tasks.test-all-integration]
 description = "Run all integration tests with insta review"
