--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2024"
 
 [workspace.dependencies]
 constants = { path = "lib/constants" }
-
 tracing = { version = "0.1.40" }
 
 [package]
@@ -34,8 +33,6 @@ uv-source-github = []
 uv-source-pypi = []
 
 [dependencies]
-constants = { workspace = true }
-
 anstream = { version = "0.6.15" }
 anyhow = { version = "1.0.86" }
 astral-tokio-tar = { version = "0.5.1" }
@@ -46,6 +43,7 @@ bstr = { version = "1.11.0" }
 clap = { version = "4.5.16", features = ["derive", "env", "string", "wrap_help"] }
 clap_complete = { version = "4.5.37", features = ["unstable-dynamic"]}
 ctrlc = { version = "3.4.5" }
+constants = { workspace = true }
 dunce = { version = "1.0.5" }
 etcetera = { version = "0.10.0" }
 fancy-regex = { version = "0.16.0" }
@@ -65,7 +63,6 @@ rand = { version = "0.9.0" }
 rayon = { version = "1.10.0" }
 reqwest = { version = "0.12.9", default-features = false, features = ["http2", "stream", "json", "rustls-tls-webpki-roots"] }
 rustc-hash = { version = "2.1.1" }
-rustix = { version = "1.0.7", features = ["pty", "process", "fs", "termios"] }
 same-file = { version = "1.0.6" }
 semver = { version = "1.0.24", features = ["serde"] }
 serde = { version = "1.0.210", features = ["derive"] }
@@ -78,7 +75,7 @@ target-lexicon = { version = "0.13.0" }
 tempfile = { version = "3.13.0" }
 textwrap = { version = "0.16.1" }
 thiserror = { version = "2.0.11" }
-tokio = { version = "1.40.0", features = ["fs", "process", "rt", "sync", "macros"] }
+tokio = { version = "1.47.1", features = ["fs", "process", "rt", "sync", "macros"] }
 tokio-util = { version = "0.7.13" }
 toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"]}
 tracing = { workspace = true }
@@ -88,6 +85,7 @@ url = { version = "2.5.2", features = ["serde"] }
 which = { version = "8.0.0" }
 
 [target.'cfg(unix)'.dependencies]
+pty = { path = "lib/pty" }
 libc = { version = "0.2.164" }
 pprof = { version = "0.15.0", optional = true }
 
