--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,9 @@ async_zip = { git = "https://github.com/astral-sh/rs-async-zip", rev = "c909fda6
 axoupdater = { version = "0.9.0", default-features = false, features = [ "github_releases"], optional = true }
 bstr = { version = "1.11.0" }
 clap = { version = "4.5.16", features = ["derive", "env", "string", "wrap_help"] }
-clap_complete = { version = "4.5.37", features = ["unstable-dynamic"]}
-ctrlc = { version = "3.4.5" }
+clap_complete = { version = "4.5.37", features = ["unstable-dynamic"] }
 constants = { workspace = true }
+ctrlc = { version = "3.4.5" }
 dunce = { version = "1.0.5" }
 etcetera = { version = "0.10.0" }
 fancy-regex = { version = "0.16.0" }
@@ -51,12 +51,13 @@ fs-err = { version = "3.1.0", features = ["tokio"] }
 futures = { version = "0.3.31" }
 hex = { version = "0.4.3" }
 http = { version = "1.1.0" }
+ignore = { version = "0.4.23" }
 indicatif = { version = "0.18.0" }
 indoc = { version = "2.0.5" }
 itertools = { version = "0.14.0" }
 # Enable static linking for liblzma
 # This is required for the `xz` feature in `async-compression`
-liblzma = { version = "*", features = ["static"]}
+liblzma = { version = "*", features = ["static"] }
 memchr = { version = "2.7.5" }
 owo-colors = { version = "4.1.0" }
 rand = { version = "0.9.0" }
@@ -67,8 +68,8 @@ same-file = { version = "1.0.6" }
 semver = { version = "1.0.24", features = ["serde"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_ignored = { version = "0.1.12" }
-serde_json = { version = "1.0.132" , features = ["unbounded_depth"]}
-serde_stacker = {version = "0.1.12"}
+serde_json = { version = "1.0.132", features = ["unbounded_depth"] }
+serde_stacker = { version = "0.1.12" }
 serde_yaml = { version = "0.9.34" }
 shlex = { version = "1.3.0" }
 target-lexicon = { version = "0.13.0" }
@@ -77,7 +78,7 @@ textwrap = { version = "0.16.1" }
 thiserror = { version = "2.0.11" }
 tokio = { version = "1.47.1", features = ["fs", "process", "rt", "sync", "macros"] }
 tokio-util = { version = "0.7.13" }
-toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"]}
+toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }
 tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 unicode-width = { version = "0.2.0" }
@@ -85,9 +86,12 @@ url = { version = "2.5.2", features = ["serde"] }
 which = { version = "8.0.0" }
 
 [target.'cfg(unix)'.dependencies]
-pty = { path = "lib/pty" }
 libc = { version = "0.2.164" }
 pprof = { version = "0.15.0", optional = true }
+pty = { path = "lib/pty" }
+
+[build-dependencies]
+fs-err = { version = "3.1.0" }
 
 [dev-dependencies]
 assert_cmd = { version = "2.0.16", features = ["color"] }
@@ -100,9 +104,6 @@ regex = { version = "1.11.0" }
 
 [package.metadata.cargo-shear]
 ignored = ["liblzma"]
-
-[build-dependencies]
-fs-err = { version = "3.1.0" }
 
 [lints]
 workspace = true
