--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -302,3 +302,7 @@ jobs:
     with:
       plan: ${{ needs.plan.outputs.val }}
     secrets: inherit
+    permissions:
+      "contents": "read"
+      "id-token": "write"
+      "pages": "write"
