--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,5 +1,5 @@
 [[profile.default.overrides]]
 # Retry flaky node tests due to npm 403 errors
-filter = 'kind(test) and test(node::)'
+filter = 'binary_id(prek::languages) and test(node::)'
 retries = 2
 slow-timeout = { period = "30s", terminate-after = 3 }
