--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,7 +152,7 @@ jobs:
             --workspace \
             --status-level skip --failure-output immediate --no-fail-fast -j 8 --final-status-level slow
 
-          cargo llvm-cov report --lcov --output-path lcov.info
+          cargo llvm-cov report --lcov --ignore-filename-regex lib/pty --output-path lcov.info
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
