Add docs about builtin hooks (#678)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
   - Workspace Mode: workspace.md
   - Differences: diff.md
   - Benchmark: benchmark.md
+  - Built-in Hooks: builtin.md
 
 markdown_extensions:
   - pymdownx.highlight:
