Speed up `check_toml` (#713)
* Speed up check_toml, closes #710

* fmt

* codecov

* fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,7 @@ textwrap = { version = "0.16.1" }
 thiserror = { version = "2.0.11" }
 tokio = { version = "1.47.1", features = ["fs", "process", "rt", "sync", "macros"] }
 tokio-util = { version = "0.7.13" }
-toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }
+toml = { version = "0.9.5", default-features = false, features = ["fast_hash", "parse", "preserve_order", "serde"] }
 tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 unicode-width = { version = "0.2.0" }
