--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,11 +139,16 @@ jobs:
         uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          # A dummy dependency path to enable caching of go modules.
+          cache-dependency-path: LICENSE
 
       - name: "Install Go"
         uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
         with:
           go-version: ${{ env.GO_VERSION }}
+          # A dummy dependency path to enable caching of go modules.
+          cache-dependency-path: LICENSE
 
       - name: "Cargo test"
         run: |
@@ -191,11 +196,16 @@ jobs:
         uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          # A dummy dependency path to enable caching of go modules.
+          cache-dependency-path: LICENSE
 
       - name: "Install Go"
         uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
         with:
           go-version: ${{ env.GO_VERSION }}
+          # A dummy dependency path to enable caching of go modules.
+          cache-dependency-path: LICENSE
 
       - name: "Cargo test"
         run: |
@@ -238,11 +248,16 @@ jobs:
         uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          # A dummy dependency path to enable caching of go modules.
+          cache-dependency-path: LICENSE
 
       - name: "Install Go"
         uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
         with:
           go-version: ${{ env.GO_VERSION }}
+          # A dummy dependency path to enable caching of go modules.
+          cache-dependency-path: LICENSE
 
       - name: "Find node and npm versions"
         run: |
